Implement new flush flow
Signed-off-by: Austin Littley <austin@swirldslabs.com>